OTC card height issue - dark mode

--- a/08072020/scss/dark-mode.scss
+++ b/08072020/scss/dark-mode.scss
@@ -4990,9 +4990,32 @@ ul.sapUshellInner {
             &:first-child , &:nth-child(2){
                 > .sapUiContentPadding.sapUiVlt{
                     > .sapUiVltCell.sapuiVltCell{
-                        > .sapMFlexBoxBGTransparent{
-                            @media (min-width: 768px){
-                                height: 585px;
+                        &:first-child{
+                            > .sapMFlexBoxBGTransparent{
+                                @media (min-width: 768px){
+                                    height: 620px;
+                                }
+                            }
+                        }
+                        &:nth-child(2){
+                            > .sapMFlexBoxBGTransparent{
+                                @media (min-width: 768px){
+                                    height: 630px;
+                                }
+                            }
+                        }
+                        &:nth-child(3){
+                            > .sapMFlexBoxBGTransparent{
+                                @media (min-width: 768px){
+                                    height: 500px;
+                                }
+                            }
+                        }
+                        &:nth-child(4){
+                            > .sapMFlexBoxBGTransparent{
+                                @media (min-width: 768px){
+                                    height: 500px;
+                                }
                             }
                         }
                     }
